test/Fail/RecordPattern2.err
RecordPattern2.agda:10.6-19: error: [TooManyFields]
The record type R does not have the field g but it would have the
field f
when checking that the pattern record { g = a } has type R
